--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "app",
+  "name": "app-backend-your-list",
   "version": "1.0.0",
   "description": "Backend da aplicação You List",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "production": "pm2 start src/index.js --name app-backend-your-list -f",
+    "monit": "./node_modules/.bin/pm2 monit"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/Rdfenix/your_list/issues"
   },
-  "homepage": "https://github.com/Rdfenix/your_list#readme"
+  "homepage": "https://github.com/Rdfenix/your_list#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "lodash": "^4.17.5",
+    "mongoose": "^5.0.7",
+    "node-restful": "^0.2.6",
+    "pm2": "^2.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.1"
+  }
 }
