--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your_list",
+  "name": "frontend",
   "version": "1.0.0",
   "description": "Front-end da aplicação Your List",
   "main": "index.js",
@@ -18,23 +18,23 @@
   },
   "homepage": "https://github.com/Rdfenix/your_list#readme",
   "devDependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.2",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.0.0",
-    "css-loader": "^0.28.10",
+    "bootstrap": "3.3.7",
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "font-awesome": "^4.7.0",
+    "file-loader": "^1.1.6",
+    "font-awesome": "4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router": "^4.2.0",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.0.1",
-    "webpack-dev-server": "^3.1.0"
+    "react-router": "^3.0.2",
+    "style-loader": "^0.20.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
