--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon",
-    "production": "pm2 start src/index.js --name app-backend-your-list -f",
+    "production": "pm2 start src/index.js --name app-backend-your-list --watch -f",
     "monit": "./node_modules/.bin/pm2 monit"
   },
   "repository": {
