--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-input-mask": "^1.2.2",
     "react-router": "^3.0.2",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
